# cmake-cpp-example-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: blank.yml
examples/: CMakeLists.txt  PrintLibraryInfo.cpp  README.md
include/: README.md
include/my/example/: Meta.h
lib/: CMakeLists.txt  README.md
lib/my/example/: Meta.cpp
resources/: README.md  version.h.in
tests/: CMakeLists.txt  README.md
tests/src/: UTest_Meta.cpp
